<resources>
    <string name="app_name">Pocket Evolution</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="preference_environment">Environment</string>
    <string name="preference_num_food">Food spawns per second</string>
    <string name="preference_food_value">Nourishment per food</string>
    <string name="preference_creatures">Creatures</string>
    <string name="preference_reproduce">Reproduce</string>
    <string name="preference_hunger_reproduce">Hunger percent needed for reproduction</string>
    <string name="preference_starve">Starve</string>
</resources>